# GoRemote

./: README.md  go.mod  go.sum
data/: data.csv  dataToOwl.py  dataset.owl  ontology.py  syntheticDataGenerator.py  try.py
go-server/: main.go
nginx/: nginx.conf
rs-server/: Cargo.toml
rs-server/src/: db.rs  execute.rs  main.rs  new.rs  run.rs  user.rs
