[package]
name = "rs-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.94"
bollard = "0.18.1"
futures-util = "0.3.31"
mongodb = { version = "3.1.1" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
tokio = { version = "1.42.0", default-features = false, features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
